added get event method